# config-basica-conteiners-dbt-postgres-pgadmin

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
workflow/: .user.yml  dbt_project.yml  profiles.yml
